# applied-machine-learning

./: .dockerignore  .flake8  .gitignore  .pre-commit-config.yaml  DOCKER.md  Dockerfile  HF_INTEGRATION.md  README.md  brain_storm_session_16-04-26.md  docker-compose.yml  main.py  push_models_to_hf.py  pyproject.toml
.github/workflows/: ci.yml
benchmark_results/: benchmark_scores.json
gait_classification/: __init__.py  api.py  api_endpoint.py  benchmark_models.py  compute_centroids.py  compute_fft_centroids.py  cosface_loss.py  eval.py  eval_fft_centroids.py  finetune.py  hf_utils.py  main.py  plot_training_curves.py  train.py  triplet_loss.py  utils.py
gait_classification/api/: README.md  __init__.py  model_selection_page.py  state.py
gait_classification/api/routes/: ml.py  web.py
gait_classification/api/static/: style.css
gait_classification/api/templates/: base.html  classify_user.html  home.html  model_page.html  model_selection.html
gait_classification/api/templates/fragments/: enroll_status.html
gait_classification/data/: filters.py  gait_data.py  main.py  preprocessing.py
gait_classification/frontend/: README.md  app.py
gait_classification/frontend/templates/: index.html
gait_classification/models/: cosface_head.py  lstm.py  models.py  transformer.py
gait_classification/notebooks/: data-exploration.py  gait_identity_verification.py  prelim_data_look.ipynb  trajectory.py  xai.py
gait_detection/: gait_detection.ipynb  tf_seg_new.ipynb
group_notes/: TA Meeting 30-04.md  project-specification.md  ta-meeting1-24-04-26.md  ta-meeting1-notes.md
project_name/notebooks/: data-exploration.ipynb  data-exploration.py  trajectory.py
submissions/deployment/: contributions.md  copilot.txt  deployment.tex  evaluation.md  summary.md
submissions/deployment/figures/: contributions.md
submissions/deployment/sections/: section-01-status-summary.tex  section-02-validation-evidence.tex  section-03-api-documentation.tex  section-04-submission-artifacts.tex  section-05-contributions.tex  section-06-copilot.tex
submissions/proposal/: proposal.tex  references.bib
submissions/proposal/sections/: section-01-preliminary-domain-knowledge.tex  section-02-preliminary-data-exploration.tex  section-03-proposed-preprocessing.tex  section-04-proposed-models-and-baseline.tex  section-05-proposed-evaluation.tex  section-06-model-usage.tex  section-07-risk-assessment.tex  section-08-individual-learning-outcomes.tex  section-09-relation-to-grading-specifications.tex  section-10-timeline.tex  section-11-contributions.tex
tests/: test_api.py  test_main.py
