[build-system]
requires = ["hatchling>=1.26.0"]
build-backend = "hatchling.build"

[project]
name = "applied-machine-learning"
version = "0.1.0"
description = "Gait Classification Assignment Applied ML"
authors = [
	{ name = "Haukur Sigurdur", email = "efeozbal01@gmail.com"},
	{ name = "Efe Ozbal" },
	{ name = "Will Meeus", email = "will.meeus@gmail.com" },
	{ name = "Tijje Steeman", email = "tijjesteeman@gmail.com" },
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
	"numpy>=2.1.0",
	"pandas>=2.2.2",
	"scipy>=1.14.1",
	"scikit-learn>=1.5.2",
	"matplotlib>=3.9.2",
	"seaborn>=0.13.2",
	"tqdm>=4.67.3",
	"torch>=2.11.0",
	"torchinfo>=1.8.0",
]

[project.scripts]
gait_classification = "gait_classification.main:main"

[dependency-groups]
dev = [
	"black>=24.8.0",
	"flake8>=6.1.0",
	"jupyterlab>=4.2.5",
	"ipykernel>=6.29.5",
]

[tool.hatch.build.targets.wheel]
packages = ["gait_classification"]

[tool.black]
line-length = 100
target-version = ["py312"]

